--- a/Styles/Css/index.css
+++ b/Styles/Css/index.css
@@ -1,50 +1,61 @@
 .header {
-    background-color:blueviolet;
     width: 100%;
+    height: 200px;
 }
 
-
 .header__column {
-    background-color: yellow;
+    margin-top: 100px;
     float: left;
-    width: 25%;
+    width: 20%;
+    text-align: center;
+    color: white;
+}
+.header__link {
+    color: white;
+}
+
+.body {
+width: 100%;
+height: 100%;
 }
 
 .footer {
-    background-color:blueviolet;
-    width: 100%;;
+    background-color:black;
+    width: 100%;
+    float: left;
 }
 
 .footer__column {
     background-color:red;
     float: left;
-    width: 25%;
+    width: 15%;
+    height: 200px;
+    margin-left: 5%;
 }
 
-.body {
-    background-color:greenyellow;
-    width: 100%;
-}
-
-
-.body__column {
-    background-color: pink;
-    float: left;
-    width: 25%;
+.main_page {
+    background-image: url(../../assets/background_image.jpg);
+    background-color: #cccccc;
+    height: 800px;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
 }
 
 .side__bar {
+    margin-top: 200px;
     background-color: blue;
     float: left;
     width: 25%;
 }
 .side__bar__column {
     background-color: blue;
-    width: 25%;
+    width: 100%;
+    height: 100px;
+    border: solid;
 }
 
 .content {
-    background-color: grey;
     float: left;
     width: 75%;
 }
